Sun May  7 00:54:57 EDT 2000  John Wehle  (john@feith.com)

	* rtl.def (COND_EXEC): Clarify.

	* i386.md (extendsidi2): Clobber (reg:CC 17) in the
	same fashion as zero_extendsidi2.

2000-05-06  Richard Henderson  <rth@cygnus.com>

	* config/ia64/ia64.c (predicate_operator): New.
	(ia64_print_operand): Handle 'J'.
	(rtx_needs_barrier): Handle COND_EXEC.
	* config/ia64/ia64.h (BRANCH_COST): Define.
	(PREDICATE_CODES): Update.
	* config/ia64/ia64.md: Docuement used unspec values.
	(attr predicable): New.
	(movxf, movxf_internal): New.
	(extendsfdf2): Don't comment out nop.
	(floatdidf2): Remove.
	(truncxfsf2, truncxfdf2, floatdixf2): New.
	(abssi2, absdi2): Put the neg in the "true" slot.
	(conditional branch instructions): Mark not predicable.
	(cmov*_internal): Use predicate_operator.  Split to cond_exec.
	(abs*_internal): Likewise.
	(alloc, set_bsp): Mark not predicable.
	(barrier, insn_group_barrier, flush_cache): Likewise.
	(define_cond_exec): New.

2000-05-06  Richard Henderson  <rth@cygnus.com>

	* c-decl.c: Include "tm_p.h".

	* config/ia64/ia64-protos.h: Rearrange decls to reduce ifdef madness.
	(fetchadd_operand, ia64_expand_fetch_and_op): Declare.
	(ia64_expand_op_and_fetch): Declare.
	* config/ia64/ia64.c: Include "toplev.h".  Kill trailing whitespace.
	(setjmp_operand): Constify variables for XSTR.
	(ia64_encode_section_info): Likewise.
	(ia64_print_operand): Use %d for exact_log2; cast 32-bit printed
	values to int.
	(ia64_asm_output_external): Constify name.
	(process_set): Use HOST_WIDE_INT_PRINT_DEC for frame size.
	(process_for_unwind_directive): Provide switch default.
	(ia64_expand_compare_and_swap): Remove unused variables.
	(ia64_expand_builtin): Likewise.
	* config/ia64/ia64.h (ASM_OUTPUT_BYTE): Mask and cast value to int
	for printing.

	* config/ia64/ia64.c (sdata_symbolic_operand): Mark unused args.
	(symbolic_operand, function_operand, setjmp_operand): Likewise.
	(shift_count_operand, shift_32bit_count_operand): Likewise.